--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,11 @@
                 <ul id="nav-mobile" class="right side-nav">
                     <li><a internal href="{{ site.baseurl }}/">Docs</a>
                     </li>
-                    <li><a internal href="{{ site.baseurl }}/blog/">Blog</a>
+                    <!--<li><a internal href="{{ site.baseurl }}/blog/">Technical Blog</a>
+                    </li>-->
+                    <li><a internal href="http://blog.umitems.com/search/label/Developer">Dev Blog</a>
+                    </li>
+                    <li><a internal href="http://blog.umitems.com/">Blog</a>
                     </li>
                     <li><a internal href="{{ site.baseurl }}/about/">About</a>
                     </li>
