--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,4 +20,8 @@
     <script type="text/javascript" src="{{ site.baseurl }}/js/modernizr.js"></script>
     <script type="text/javascript" src="{{ site.baseurl }}/js/materialize.min.js"></script>
     <script type="text/javascript" src="{{ site.baseurl }}/js/main.js"></script>
+
+    <!-- Icons -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/apple-touch-icon-144-precomposed.png">
+    <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico">
 </head>
