--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,13 +9,13 @@
                     </li>
                     <!--<li><a internal href="{{ site.baseurl }}/blog/">Technical Blog</a>
                     </li>-->
-                    <li><a internal href="http://blog.umitems.com/search/label/Developer">Dev Blog</a>
+                    <li><a internal href="http://blog.umitems.com/search/label/Developer" target="_blank">Dev Blog</a>
                     </li>
-                    <li><a internal href="http://blog.umitems.com/">Blog</a>
+                    <li><a internal href="http://blog.umitems.com/" target="_self">Blog</a>
                     </li>
                     <li><a internal href="{{ site.baseurl }}/about/">About</a>
                     </li>
-                    <li><a href="https://umitems.github.io//" target="_blank">GitHub</a>
+                    <li><a href="https://github.com/umitems" target="_blank">GitHub</a>
                     </li>
                 </ul>
                 <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
