--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,9 +9,9 @@
                     </li>
                     <!--<li><a internal href="{{ site.baseurl }}/blog/">Technical Blog</a>
                     </li>-->
-                    <li><a  href="http://blog.umitems.com/search/label/Developer" target="_blank">Dev Blog</a>
+                    <li><a href="http://blog.umitems.com/search/label/Developer" target="_blank">Dev Blog</a>
                     </li>
-                    <li><a href="http://blog.umitems.com/" >Blog</a>
+                    <li><a href="http://blog.umitems.com/" target="_blank">Blog</a>
                     </li>
                     <li><a internal href="{{ site.baseurl }}/about/">About</a>
                     </li>
