mod btn-floating in materialize.css

--- a/css/materialize.css
+++ b/css/materialize.css
@@ -5608,14 +5608,11 @@ ul.tabs li.tab {
   color: #FFF;
   position: relative;
   z-index: 1;
-  width: 37px;
-  height: 37px;
-  line-height: 37px;
-  padding: 0;
-  background-color: #26a69a;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
+  padding: 5;
+  background-color: transparent;
+  -webkit-border-radius: 10%;
+  -moz-border-radius: 10%;
+  border-radius: 10%;
   background-clip: padding-box;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
