#12 remove gitHub in menubar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,24 +2,20 @@
     <div class="navbar-fixed">
         <nav class="{{ site.css }} darken-2 waves-effect waves-light">
             <div class="nav-wrapper">
-               <div class="container">
-                <a internal href="{{ site.baseurl }}/" class="brand-logo"><i class="mdi-communication-chat"></i> {{site.title}}</a>
-                <ul id="nav-mobile" class="right side-nav">
-                    <li><a internal href="{{ site.baseurl }}/">Profile</a>
-                    </li>
-                    <!--<li><a internal href="{{ site.baseurl }}/blog/">Technical Blog</a>
-                    </li>-->
-                    <li><a href="http://blog.umitems.com/search/label/Developer" target="_blank">Dev Blog</a>
-                    </li>
-                    <li><a href="http://blog.umitems.com/" target="_blank">Blog</a>
-                    </li>
-                    <li><a internal href="{{ site.baseurl }}/about/">About</a>
-                    </li>
-                    <li><a href="https://github.com/umitems" target="_blank">GitHub</a>
-                    </li>
-                </ul>
-                <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
-            </div>
+                <div class="container">
+                    <a internal href="{{ site.baseurl }}/" class="brand-logo"><i class="mdi-communication-chat"></i>
+                        {{site.title}}</a>
+                    <ul id="nav-mobile" class="right side-nav">
+                        <li><a internal href="{{ site.baseurl }}/">Profile</a>
+                        </li>
+                        <!--<li><a internal href="{{ site.baseurl }}/blog/">Technical Blog</a>
+                        </li>-->
+                        <li><a href="http://blog.umitems.com/search/label/Developer" target="_blank">Dev Blog</a></li>
+                        <li><a href="http://blog.umitems.com/" target="_blank">Blog</a></li>
+                        <li><a internal href="{{ site.baseurl }}/about/">About</a></li>
+                    </ul>
+                    <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
+                </div>
             </div>
         </nav>
     </div>
