--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,7 @@
                         <li><a href="http://blog.umitems.com/search/label/Developer" target="_blank">Dev Blog</a></li>
                         <li><a href="http://blog.umitems.com/" target="_blank">Blog</a></li>
                         <li><a internal href="{{ site.baseurl }}/about/">About</a></li>
+                        <li><a internal href="{{ site.baseurl }}/about/">Quotes</a></li>
                     </ul>
                     <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
                 </div>
