--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
                     <a internal href="{{ site.baseurl }}/" class="brand-logo"><i class="mdi-communication-chat"></i>
                         {{site.title}}</a>
                     <ul id="nav-mobile" class="right side-nav">
-                        <li><a internal href="{{ site.baseurl }}/">Profile</a>
+                        <li><a internal href="{{ site.baseurl }}/">Home</a>
                         </li>
                         <!--<li><a internal href="{{ site.baseurl }}/blog/">Technical Blog</a>
                         </li>-->
