--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,8 +10,8 @@
                         </li>
                         <!--<li><a internal href="{{ site.baseurl }}/blog/">Technical Blog</a>
                         </li>-->
-                        <li><a href="http://blog.umitems.com/search/label/Developer" target="_blank">Dev Blog</a></li>
-                        <li><a href="http://blog.umitems.com/" target="_blank">Blog</a></li>
+                        <li><a href="http://umitems.blogspot.com/search/label/Developer" target="_blank">Dev Blog</a></li>
+                        <li><a href="http://umitems.blogspot.com/" target="_blank">Blog</a></li>
                         <li><a internal href="{{ site.baseurl }}/about/">About</a></li>
                         <li><a internal href="{{ site.baseurl }}/quotes/">Quotes</a></li>
                     </ul>
